Minor fixes in StartPresenter.java, Reimplemented Module-Naming function

--- a/moodle-sync-fx/src/main/resources/views/main-start/main-start.fxml
+++ b/moodle-sync-fx/src/main/resources/views/main-start/main-start.fxml
@@ -91,7 +91,7 @@
                     </DynamicResizePolicy>
                 </columnResizePolicy>
                 <columns>
-                    <TableColumn fx:id="courseViewTableColumn" text="Moodle">
+                    <TableColumn fx:id="courseViewTableColumn" editable="true" text="Moodle">
                     <cellFactory>
                             <HighlightSectionCellFactory/>
                         </cellFactory>
