--- a/moodle-sync-fx/src/main/resources/views/main-start/main-start.css
+++ b/moodle-sync-fx/src/main/resources/views/main-start/main-start.css
@@ -91,3 +91,14 @@
     -fx-text-fill: black;
 }
 
+.table-cell .time-picker > .box > .fields-box > .time-field {
+    -fx-text-fill: black;
+}
+
+.table-row-cell .time-picker > .box > .fields-box > .time-field {
+    -fx-text-fill: black;
+}
+
+.table-row-cell .time-picker > .box > .fields-box > .separator {
+    -fx-text-fill: black;
+}
