--- a/moodle-sync-fx/src/main/resources/views/main-start/main-start.fxml
+++ b/moodle-sync-fx/src/main/resources/views/main-start/main-start.fxml
@@ -131,6 +131,9 @@
                <Label text="%start.labelsection" />
                <Label fx:id="sectionidlabel" />
             </children>
+             <padding>
+                 <Insets bottom="5.0" left="5.0" right="5.0" top="0.0" />
+             </padding>
          </HBox>
       </bottom>
     </BorderPane>
