Added Moodle-module dependent download-button, added functionality to download a file (will be saved in sections-directory), added file-download in "guest-view". Please Note: download-function still experimental.

--- a/moodle-sync-fx/src/main/resources/views/main-start/main-start.fxml
+++ b/moodle-sync-fx/src/main/resources/views/main-start/main-start.fxml
@@ -71,6 +71,7 @@
                             <ColumnSizeConstraints prefWidth="90.0" />
                             <ColumnSizeConstraints prefWidth="85.0" />
                             <ColumnSizeConstraints prefWidth="200.0" />
+                            <ColumnSizeConstraints prefWidth="35.0" />
                         </columnConstraints>
                     </DynamicResizePolicy>
                 </columnResizePolicy>
@@ -116,6 +117,14 @@
                         </cellFactory>
                         <cellValueFactory>
                             <PropertyValueFactory property="availabilityDateTime" />
+                        </cellValueFactory>
+                    </TableColumn>
+                    <TableColumn fx:id="downloadColumn" styleClass="CENTER">
+                        <cellFactory>
+                            <DownloadableTableCellFactory />
+                        </cellFactory>
+                        <cellValueFactory>
+                            <PropertyValueFactory property="downloadable" />
                         </cellValueFactory>
                     </TableColumn>
                 </columns>
