Added Button to download all available files. They will be merged into the existing course-directory´s subdirectories. Added download-icon.

--- a/moodle-sync-fx/src/main/resources/views/main-start/main-start.fxml
+++ b/moodle-sync-fx/src/main/resources/views/main-start/main-start.fxml
@@ -50,6 +50,12 @@
                     </ComboBox>
                 </VBox>
                <Pane HBox.hgrow="ALWAYS" />
+                <Button fx:id="downloadButton" mnemonicParsing="false" text="%start.download">
+                    <tooltip><Tooltip text="%start.download.course" /></tooltip>
+                    <graphic>
+                        <SvgIcon styleClass="icon, download-icon" />
+                    </graphic>
+                </Button>
                 <Button fx:id="updateButton" mnemonicParsing="false" text="%start.update"/>
                 <Button fx:id="syncButton" mnemonicParsing="false" text="%start.sync" />
                 <Button fx:id="settingsButton" mnemonicParsing="false" text="%start.settings" />
