--- a/moodle-sync-fx/src/main/resources/views/main-window/main-window.fxml
+++ b/moodle-sync-fx/src/main/resources/views/main-window/main-window.fxml
@@ -3,12 +3,13 @@
 <?import java.lang.String?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
-<?import moodle.sync.javafx.view.FxStartView?>
 
 <!--
     In this document, the layout of the "main-window" is defined
 -->
 
+<?import moodle.sync.javafx.view.FxGuestStartView?>
+<?import moodle.sync.javafx.view.FxTrainerStartView?>
 <fx:root type="StackPane" prefWidth="800" prefHeight="600" xmlns="http://javafx.com/javafx/8"
 		 xmlns:fx="http://javafx.com/fxml/1">
 	<stylesheets>
@@ -17,7 +18,7 @@
 
 	<BorderPane fx:id="contentPane">
 		<center>
-			<FxStartView />
+			<FxTrainerStartView />
 		</center>
 	</BorderPane>
 </fx:root>
