--- a/moodle-sync-fx/src/main/resources/views/main-trainerstart/main-trainerstart.fxml
+++ b/moodle-sync-fx/src/main/resources/views/main-trainerstart/main-trainerstart.fxml
@@ -59,6 +59,12 @@
                 <Button fx:id="updateButton" mnemonicParsing="false" text="%start.update"/>
                 <Button fx:id="syncButton" mnemonicParsing="false" text="%start.sync" />
                 <Button fx:id="settingsButton" mnemonicParsing="false" text="%start.settings" />
+                <Button fx:id="helpButton" mnemonicParsing="false" text="%start.help" >
+                    <tooltip><Tooltip text="%start.help.tooltip" /></tooltip>
+                    <graphic>
+                        <SvgIcon styleClass="icon, help-icon" />
+                    </graphic>
+                </Button>
                 <padding>
                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                 </padding>
