--- a/moodle-sync-fx/src/main/resources/views/main-settings/main-settings.fxml
+++ b/moodle-sync-fx/src/main/resources/views/main-settings/main-settings.fxml
@@ -3,9 +3,8 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import moodle.sync.javafx.factory.LocaleListCell?>
-<?import moodle.sync.javafx.factory.LocaleCellFactory?>
+<?import moodle.sync.javafx.custom.*?>
+<?import moodle.sync.javafx.factory.*?>
 
 <!--
     In this document, the layout of the "settings-page" is defined
@@ -48,8 +47,14 @@
                         <LocaleCellFactory />
                     </cellFactory>
                 </ComboBox>
-            <Label text="%settings.language.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label text="%settings.root.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+            <Label text="%settings.language.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="5.0" />
+               </GridPane.margin></Label>
+            <Label text="%settings.root.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin></Label>
             </children>
         </GridPane>
         <Label prefWidth="612.0" styleClass="text-head" text="%settings.lmslabel">
@@ -84,17 +89,29 @@
                         <Insets left="5.0" />
                     </GridPane.margin>
                 </Button>
-                <Label text="%settings.dataformatsmoodle" GridPane.rowIndex="4" />
+                <Label text="%settings.dataformatsmoodle" GridPane.rowIndex="4">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin></Label>
                 <TextArea fx:id="formatsMoodle" prefHeight="0.0" prefWidth="321.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                     <padding>
                         <Insets bottom="2.0" left="2.0" right="2.0" />
                     </padding>
                     <GridPane.margin>
-                        <Insets bottom="5.0" top="12.0" />
+                        <Insets />
                     </GridPane.margin>
                 </TextArea>
-            <Label text="%settings.lms.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-            <Label text="%settings.token.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
+            <Label text="%settings.lms.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="5.0" />
+               </GridPane.margin></Label>
+            <Label text="%settings.token.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3">
+               <padding>
+                  <Insets bottom="5.0" />
+               </padding>
+               <GridPane.margin>
+                  <Insets bottom="5.0" />
+               </GridPane.margin></Label>
             <Label text="%settings.dataformatsmoodle.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5" />
             </children>
         </GridPane>
@@ -106,7 +123,33 @@
                 <Insets bottom="5.0" right="5.0" top="10.0" />
             </padding>
         </Label>
-        <GridPane alignment="CENTER">
+      <GridPane>
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="150.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="330.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+                <Label text="%settings.choosefileserver" />
+                <Label text="%settings.choosefileserver.explain" textFill="#00000080" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <padding>
+                  <Insets bottom="5.0" />
+               </padding></Label>
+                <ComboBox fx:id="fileserverCombo" prefWidth="150.0" GridPane.columnIndex="1">
+                    <buttonCell>
+                        <FileserverListCell />
+                    </buttonCell>
+                    <cellFactory>
+                        <FileserverCellFactory />
+                    </cellFactory>
+                </ComboBox>
+         </children>
+      </GridPane>
+        <GridPane fx:id="fileserverSettings" alignment="CENTER">
             <columnConstraints>
                 <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="150.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="330.0" />
@@ -119,39 +162,95 @@
                 <RowConstraints vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            <RowConstraints fx:id="fileserverDefaultFolderColumn" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints fx:id="fileserverDefaultFolderColumnExplain" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
             <RowConstraints vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
                 <Label text="%settings.ftp" />
                 <Label text="%settings.ftpusername" GridPane.rowIndex="2" />
                 <Label text="%settings.ftppassword" GridPane.rowIndex="4" />
-                <TextField fx:id="ftpUser" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                <TextField fx:id="ftpPassword" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                <Label text="%settings.dataformatsfileserver" GridPane.rowIndex="6" />
-                <TextArea fx:id="formatsFileserver" prefHeight="0.0" prefWidth="321.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
-                    <padding>
-                        <Insets bottom="2.0" left="2.0" right="2.0" />
-                    </padding>
-                    <GridPane.margin>
-                        <Insets bottom="5.0" top="15.0" />
-                    </GridPane.margin>
-                </TextArea>
-                <TextField fx:id="ftpPort" maxWidth="-Infinity" prefHeight="25.0" prefWidth="120.0" GridPane.columnIndex="2">
+            <HBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                      <TextField fx:id="ftpUser" HBox.hgrow="ALWAYS" />
+                  <TextField fx:id="panoptoClient" layoutX="10.0" layoutY="10.0" HBox.hgrow="ALWAYS" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <children>
+                      <TextField fx:id="ftpPassword" HBox.hgrow="ALWAYS" />
+                  <TextField fx:id="panoptoSecret" layoutX="10.0" layoutY="10.0" HBox.hgrow="ALWAYS" />
+               </children>
+            </HBox>
+                <Button fx:id="checkPanopto" alignment="CENTER" contentDisplay="CENTER" maxWidth="-Infinity" mnemonicParsing="false" prefWidth="120.0" text="%settings.token.check" GridPane.columnIndex="2" GridPane.rowIndex="4">
                     <GridPane.margin>
                         <Insets left="5.0" />
                     </GridPane.margin>
-                </TextField>
+                </Button>
+                <Label text="%settings.dataformatsfileserver" GridPane.rowIndex="8" />
+            <HBox alignment="CENTER_LEFT" GridPane.columnIndex="1" GridPane.rowIndex="8">
+               <GridPane.margin>
+                  <Insets bottom="5.0" top="5.0" />
+               </GridPane.margin>
+               <children>
+                      <TextArea fx:id="formatsFTP">
+                          <padding>
+                              <Insets bottom="2.0" left="2.0" right="2.0" />
+                          </padding>
+                      </TextArea>
+                  <TextArea fx:id="formatsPanopto" layoutX="10.0" layoutY="10.0">
+                     <padding>
+                        <Insets bottom="2.0" left="2.0" right="2.0" />
+                     </padding>
+                  </TextArea>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" GridPane.columnIndex="2">
+               <GridPane.margin>
+                  <Insets left="5.0" />
+               </GridPane.margin>
+               <children>
+                        <Label fx:id="ftpPortLabel" alignment="CENTER" contentDisplay="CENTER" minWidth="40.0" prefHeight="25.0" prefWidth="30.0" text="%settings.port">
+                     <HBox.margin>
+                        <Insets left="5.0" right="5.0" />
+                     </HBox.margin></Label>
+                      <TextField fx:id="ftpPort" maxWidth="-Infinity" prefHeight="25.0">
+                     <HBox.margin>
+                        <Insets right="9.0" />
+                     </HBox.margin></TextField>
+               </children>
+            </HBox>
                 <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="300.0" GridPane.columnIndex="1">
                     <children>
-                        <TextField fx:id="ftpField" prefHeight="25.0" prefWidth="290.0" />
-                        <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="25.0" prefWidth="60.0" text="%settings.port" />
+                        <TextField fx:id="ftpField" HBox.hgrow="ALWAYS" />
+                  <TextField fx:id="panoptoField" HBox.hgrow="ALWAYS" />
                     </children>
                 </HBox>
-            <Label text="%settings.ftp.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-            <Label text="%settings.ftpusername.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-            <Label text="%settings.ftppassword.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5" />
-            <Label text="%settings.dataformatsfileserver.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="7" />
+            <Label text="%settings.ftp.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1">
+               <padding>
+                  <Insets bottom="5.0" />
+               </padding></Label>
+            <Label text="%settings.ftpusername.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="3">
+               <padding>
+                  <Insets bottom="5.0" />
+               </padding></Label>
+            <Label text="%settings.ftppassword.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5">
+               <padding>
+                  <Insets bottom="5.0" />
+               </padding>
+            </Label>
+            <Label text="%settings.dataformatsfileserver.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="9">
+               <GridPane.margin>
+                  <Insets bottom="5.0" />
+               </GridPane.margin></Label>
+            <Label fx:id="fileserverDefaultFolderLabel" text="%settings.fileserverDefaultFolder" GridPane.rowIndex="6" />
+            <Label fx:id="fileserverDefaultFolderExplain" text="%settings.fileserverDefaultFolder.explain" textFill="#00000080" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="7">
+               <padding>
+                  <Insets bottom="3.0" />
+               </padding>
+            </Label>
+            <TextField fx:id="fileserverDefaultFolder" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             </children>
         </GridPane>
         <GridPane prefHeight="45.0" prefWidth="612.0">
