--- a/moodle-sync-fx/src/main/resources/views/main-window/main-window.fxml
+++ b/moodle-sync-fx/src/main/resources/views/main-window/main-window.fxml
@@ -3,7 +3,7 @@
 <?import java.lang.String?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
-<?import moodle.sync.javafx.view.FxTrainerStartView?>
+<?import moodle.sync.javafx.view.FxSyncStartView?>
 <?import javafx.scene.control.ScrollPane?>
 
 <!--
@@ -19,7 +19,7 @@
 	<ScrollPane fitToWidth="true" fitToHeight="true" pannable="true" styleClass="scroll-pane-focus">
 	<BorderPane fx:id="contentPane">
 		<center>
-				<FxTrainerStartView/>
+				<FxSyncStartView/>
 		</center>
 	</BorderPane>
 	</ScrollPane>
